# wordpress-client

./: .dockerignore  .env.example  .env.test.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  example.py  pyproject.toml  requirements.txt  setup.py
models/: user.py
src/wordpress_client/: __init__.py  auth.py  cli.py  client.py  exceptions.py  utils.py
src/wordpress_client/models/: __init__.py  category.py  media.py  post.py  user.py
tests/: conftest.py  test_client.py  test_setup.py
